src/objects/PP_Workshop__c.object
<CustomObject>
    <description>Practice Privileges Workshop table. Will be used to track attendance at these various events</description>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>PP Workshops</relationshipLabel>
        <relationshipName>PP_Workshops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Registration_Notices__c</fullName>
        <label>CC Email Registration Notices</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <label>Event Time</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <formula>Location_Name__c + BR() + if(isblank(Location_Street__c),&apos;&apos;,Location_Street__c + BR()) + 
if(isblank(Location_City__c),&apos;&apos;,Location_City__c + &quot;, &quot; + TEXT( Location_State__c ) + &quot; &quot; + Location_Postal_Code__c)</formula>
        <label>Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Notes__c</fullName>
        <label>Location Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Postal_Code__c</fullName>
        <label>Location Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <label>Location State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <label>Location Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>PP Workshops</relationshipLabel>
        <relationshipName>PP_Workshops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registered__c</fullName>
        <label># Registered</label>
        <summaryForeignKey>PP_Workshop_Member__c.PP_Workshop__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Web_Display__c</fullName>
        <formula>if(ISBLANK( Event_Date__c ),true, 
 if(today()&gt;Event_Date__c,false,true))</formula>
        <label>Web Display</label>
        <type>Checkbox</type>
    </fields>
    <label>PP Workshop</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location_Name__c</columns>
        <columns>Location_Address__c</columns>
        <columns>Center__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Registered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PP Workshop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PP Workshops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>